--- a/index.html
+++ b/index.html
@@ -1,13 +1,72 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
-</head>
-<body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!--~~~~~~~~~~~~~ Favicon ~~~~~~~~~~~~~~-->
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+
+    <!--~~~~~~~~~~~~~ Remix icon ~~~~~~~~~~~~~~-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css" />
+
+    <!--~~~~~~~~~~~~~ Swiper's CSS ~~~~~~~~~~~~~~-->
+
+    <link href="./output.css" rel="stylesheet" />
+    <title>Plant Website || Tailwind</title>
+  </head>
+  <body>
+    <!--~~~~~~~~~~~~~ Header ~~~~~~~~~~~~~~-->
+    <header id="navbar">
+
+    </header>
+
+    <main>
+        <!--~~~~~~~~~~~~~ Home ~~~~~~~~~~~~~~-->
+        <section id="home">
+
+        </section>
+
+        <!--~~~~~~~~~~~~~ Services ~~~~~~~~~~~~~~-->
+        <section id="services">
+
+        </section>
+
+        <!--~~~~~~~~~~~~~ About Us ~~~~~~~~~~~~~~-->
+        <section id="about">
+
+        </section>
+
+        <!--~~~~~~~~~~~~~ Popular ~~~~~~~~~~~~~~-->
+        <section id="popular">
+
+        </section>
+
+        <!--~~~~~~~~~~~~~ Review ~~~~~~~~~~~~~~-->
+        <section id="review">
+
+        </section>
+    </main>
+
+    <!--~~~~~~~~~~~~~ footer ~~~~~~~~~~~~~~-->
+    <footer>
+        <!-- newsletter -->
+
+        <!-- social icon -->
+
+        <!-- content -->
+
+        <!-- copyright -->
+
+        <!-- floral image -->
+    </footer>
+
+    <!--~~~~~~~~~~~~~ Scroll Up ~~~~~~~~~~~~~~-->
+
+    <!--~~~~~~~~~~~~~ Swiper JS ~~~~~~~~~~~~~~-->
+
+    <!--~~~~~~~~~~~~~ SCROLLREVEAL ~~~~~~~~~~~~~~-->
+
+    <!--~~~~~~~~~~~~~ mainjs ~~~~~~~~~~~~~~-->
+  </body>
 </html>
