--- a/index.html
+++ b/index.html
@@ -17,8 +17,40 @@
   </head>
   <body>
     <!--~~~~~~~~~~~~~ Header ~~~~~~~~~~~~~~-->
-    <header id="navbar">
+    <header id="navbar" class="bg-green-950 fixed top-0 left-0 w-full z-50">
+        <nav class="container flex items-center justify-between h-16 sm:h-20">
+            <div class="font-Lobster sm:text-2xl">IndorePlants.</div>
 
+            <div id="nav-menu" class="absolute top-0 -left-[100%] overflow-hidden min-h-[80vh] w-full bg-green-950/80 backdrop-blur-sm flex items-center justify-center duration-300 lg:static lg:min-h-fit lg:bg-transparent lg:w-auto">
+                <ul class="flex flex-col lg:flex-row gap-8 items-center justify-center">
+                    <li>
+                        <a href="#home" class="nav-link">Home</a>
+                    </li>
+
+                    <li>
+                        <a href="#about" class="nav-link">About</a>
+                    </li>
+
+                    <li>
+                        <a href="#popular" class="nav-link">Popular</a>
+                    </li>
+
+                    <li>
+                        <a href="#review" class="nav-link">Review</a>
+                    </li>
+                </ul>
+                <div class="absolute bottom-0 -right-10 opacity-90 lg:hidden">
+                    <img src="assets/img/leaf-1.png" alt="leaf_image" class="w-32">
+                </div>
+                <div class="absolute -top-5 -left-5 rotate-90 opacity-90 lg:hidden">
+                    <img src="assets/img/leaf-2.png" alt="leaf_image" class="w-32">
+                </div>
+                
+            </div>
+            <div class="text-xl sm:text-3xl cursor-pointer z-50 lg:hidden">
+                <i class="ri-menu-4-line" id="hamburger"></i>
+            </div>
+        </nav>
     </header>
 
     <main>
@@ -68,5 +100,6 @@
     <!--~~~~~~~~~~~~~ SCROLLREVEAL ~~~~~~~~~~~~~~-->
 
     <!--~~~~~~~~~~~~~ mainjs ~~~~~~~~~~~~~~-->
+    <script src="main.js"></script>
   </body>
 </html>
