--- a/index.html
+++ b/index.html
@@ -55,8 +55,66 @@
 
     <main>
         <!--~~~~~~~~~~~~~ Home ~~~~~~~~~~~~~~-->
-        <section id="home">
+        <section id="home" class="relative">
+            <div class="container">
+                <!-- blob 1 -->
+                 <div class="w-64 h-64 bg-green-700 rounded-full blur-3xl -z-10 opacity-40 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
+                 </div>
 
+                 <!-- blob 2 -->
+                 <div class="w-64 h-64 bg-green-700 rounded-full blur-3xl -z-10 opacity-40 absolute right-0 bottom-5">
+                </div>
+
+                <div class="flex flex-col items-center gap-5 lg:flex-row">
+                    <!-- content -->
+                    <div class="w-full space-y-5 lg:w-1/2">
+                        <h1>
+                            <span class="text-yellow-500">Plants</span> make a <br>positive <span class="text-yellow-500">impact </span>on <br>your environment
+                        </h1>
+                        <p class="text-slate-300 font-Lobster">Incorporating plants into your business environment not only enhances aesthetic appeal but also brings substantial benefits to your workplace. They also help regulate indoor temperatures and humidity</p>
+                        <div class="flex flex-col gap-2 sm:flex-row md:gap-4 lg:pt-5 xl:pt-10">
+                            <button class="btn">
+                                <span>Shop Now</span>
+                                <i class="ri-leaf-line"></i>
+                            </button>
+
+                            <button class="btn btn_outline">
+                                <span>Know More</span>
+                                <i class="ri-leaf-line"></i>
+                            </button>
+                        </div>
+
+                        <p class="text-xs font-Lobster text-slate-300">You will get 30-days free trial</p>
+
+                        <div class="flex items-center gap-5 text-lg lg:pt-10">
+                            <i class="ri-facebook-fill text-slate-300 hover:text-yellow-500 duration-300 cursor-pointer"></i>
+                            <i class="ri-twitter-x-line text-slate-300 hover:text-yellow-500 duration-300 cursor-pointer text-base"></i>
+                            <i class="ri-instagram-line  text-slate-300 hover:text-yellow-500 duration-300 cursor-pointer"></i>
+                            <i class="ri-linkedin-fill text-slate-300 hover:text-yellow-500 duration-300 cursor-pointer"></i>
+                        </div>
+                    </div>
+
+                    <!-- image -->
+                     <div class="w-full relative lg:w-1/2">
+                        <img src="assets/img/home.png" alt="home_image">
+
+                        <!-- leaf -->
+                         <div class="absolute -top-5 right-0 opacity-30 animate-movingY">
+                            <i class="ri-leaf-line text-yellow-300 text-6xl"></i>
+                         </div>
+
+                         <!-- flower -->
+                         <div class="absolute bottom-0 left-0 opacity-30 xl:bottom-12 animate-rotating">
+                            <i class="ri-flower-line text-yellow-300 text-6xl"></i>
+                         </div>
+
+                         <!-- plant -->
+                         <div class="hidden lg:block absolute -top-8 -left-5 opacity-30 animate-scalingUp">
+                            <i class="ri-plant-line text-yellow-300 text-6xl"></i>
+                         </div>
+                     </div>
+                </div>
+            </div>
         </section>
 
         <!--~~~~~~~~~~~~~ Services ~~~~~~~~~~~~~~-->
