--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <section id="home" class="relative">
             <div class="container">
                 <!-- blob 1 -->
-                 <div class="w-64 h-64 bg-green-700 rounded-full blur-3xl -z-10 opacity-40 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
+                 <div class="lg:w-64 lg:h-64 w-32 h-32 bg-green-700 rounded-full blur-3xl -z-10 opacity-40 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
                  </div>
 
                  <!-- blob 2 -->
@@ -118,8 +118,60 @@
         </section>
 
         <!--~~~~~~~~~~~~~ Services ~~~~~~~~~~~~~~-->
-        <section id="services">
+        <section id="services" class="bg-white text-green-900 py-20">
+            <div class="container w-full grid gap-8 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
+                <!-- card 1 -->
+                <div class="border border-green-950 rounded-md p-5 cursor-pointer hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-5">
+                    <div class="flex items-center gap-5">
+                        <i class="ri-truck-line text-3xl md:text-4xl xl:text-5xl"></i>
+                        <p class="md:text-lg font-bold">
+                            Fast <br> Delivery
+                        </p>
+                    </div>
+                    <p class="font-Lobster">
+                        Get fast delivery whether you live inside Dhaka or outside Dhaka
+                    </p>
+                </div>
 
+                <!-- card 2 -->
+                <div class="border border-green-950 rounded-md p-5 cursor-pointer hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-5">
+                    <div class="flex items-center gap-5">
+                        <i class="ri-customer-service-line text-3xl md:text-4xl xl:text-5xl"></i>
+                        <p class="md:text-lg font-bold">
+                            Great Customer <br> Service
+                        </p>
+                    </div>
+                    <p class="font-Lobster">
+                        Get the best customer service in the country from our business
+                    </p>
+                </div>
+
+                <!-- card 3 -->
+                <div class="border border-green-950 rounded-md p-5 cursor-pointer hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-5">
+                    <div class="flex items-center gap-5">
+                        <i class="ri-plant-line text-3xl md:text-4xl xl:text-5xl"></i>
+                        <p class="md:text-lg font-bold">
+                            Original <br> Fard
+                        </p>
+                    </div>
+                    <p class="font-Lobster">
+                        We grow plants in our own nursery with the best care
+                    </p>
+                </div>
+
+                <!-- card 4 -->
+                <div class="border border-green-950 rounded-md p-5 cursor-pointer hover:shadow-2xl hover:-translate-y-1 duration-300 space-y-5">
+                    <div class="flex items-center gap-5">
+                        <i class="ri-money-dollar-circle-line text-3xl md:text-4xl xl:text-5xl"></i>
+                        <p class="md:text-lg font-bold">
+                            Afordable <br> Price
+                        </p>
+                    </div>
+                    <p class="font-Lobster">
+                        Dont't worry about money! We provide plants for everyone
+                    </p>
+                </div>
+            </div>
         </section>
 
         <!--~~~~~~~~~~~~~ About Us ~~~~~~~~~~~~~~-->
