added popular section

--- a/index.html
+++ b/index.html
@@ -231,10 +231,16 @@
       <!--~~~~~~~~~~~~~ About Us ~~~~~~~~~~~~~~-->
       <section id="about" class="relative overflow-hidden">
         <div class="absolute -top-8 -right-12 opacity-50">
-            <img src="assets/img/leaf-3.png" alt="leaf_image" class="w-40 md:w-52 xl:w-64">
+          <img
+            src="assets/img/leaf-3.png"
+            alt="leaf_image"
+            class="w-40 md:w-52 xl:w-64"
+          />
         </div>
 
-        <div class="flex flex-col items-center gap-3 text-center mb-10 md:mb-20">
+        <div
+          class="flex flex-col items-center gap-3 text-center mb-10 md:mb-20"
+        >
           <h2 class="title">About Us</h2>
           <p class="max-w-2xl">Follow instructions for more</p>
         </div>
@@ -244,18 +250,26 @@
           <div class="flex flex-col lg:flex-row items-center gap-5">
             <!-- image -->
             <div class="w-full lg:w-1/2">
-              <img src="assets/img/plant-1.png" alt="about_image" 
-              class="w-full sm:w-2/3 lg:w-full xl:-w-2/3 mx-auto"/>
+              <img
+                src="assets/img/plant-1.png"
+                alt="about_image"
+                class="w-full sm:w-2/3 lg:w-full xl:-w-2/3 mx-auto"
+              />
             </div>
 
             <!-- content -->
             <div class="w-full lg:w-1/2">
               <div class="space-y-5">
                 <h3>
-                    Make your <span class="text-yellow-500">Organic</span> <br>Garden
+                  Make your <span class="text-yellow-500">Organic</span>
+                  <br />Garden
                 </h3>
                 <p class="text-slate-300 font-Lobster">
-                    An organic garden uses natural methods to grow plants without synthetic pesticides or fertilizers, promoting healthy soil, biodiversity, and sustainable practices for fresh, chemical-free produce. So join us to build an eco friendly world.
+                  An organic garden uses natural methods to grow plants without
+                  synthetic pesticides or fertilizers, promoting healthy soil,
+                  biodiversity, and sustainable practices for fresh,
+                  chemical-free produce. So join us to build an eco friendly
+                  world.
                 </p>
               </div>
             </div>
@@ -265,18 +279,25 @@
           <div class="flex flex-col items-center gap-5 lg:flex-row-reverse">
             <!-- image -->
             <div class="w-full lg:w-1/2">
-              <img src="assets/img/plant-2.png" alt="about_image" 
-              class="w-full sm:w-2/3 lg:w-full xl:-w-2/3 mx-auto"/>
+              <img
+                src="assets/img/plant-2.png"
+                alt="about_image"
+                class="w-full sm:w-2/3 lg:w-full xl:-w-2/3 mx-auto"
+              />
             </div>
 
             <!-- content -->
             <div class="w-full lg:w-1/2">
               <div class="space-y-5">
                 <h3>
-                    Come with us <span class="text-yellow-500">grow up</span> <br>your plant
+                  Come with us <span class="text-yellow-500">grow up</span>
+                  <br />your plant
                 </h3>
                 <p class="text-slate-300 font-Lobster">
-                    Join a community of plant enthusiasts where we guide you in nurturing your garden, sharing tips, and cultivating a thriving, healthy, and sustainable green space and work together hands in hands.
+                  Join a community of plant enthusiasts where we guide you in
+                  nurturing your garden, sharing tips, and cultivating a
+                  thriving, healthy, and sustainable green space and work
+                  together hands in hands.
                 </p>
               </div>
             </div>
@@ -285,7 +306,113 @@
       </section>
 
       <!--~~~~~~~~~~~~~ Popular ~~~~~~~~~~~~~~-->
-      <section id="popular"></section>
+      <section id="popular" class="bg-green-900">
+        <div
+          class="flex flex-col items-center gap-3 text-center mb-48"
+        >
+          <h2 class="title">Your Choice Plant</h2>
+          <p class="max-w-2xl">Follow instructions for more</p>
+        </div>
+
+        <div class="container w-full grid grid-cols-1 gap-x-8 gap-y-36 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
+            <!-- card 1 -->
+            <div class="popular__card bg-green-950 p-10 pt-24 rounded-md relative">
+                <img src="assets/img/cart-1.png" alt="popular_image" class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500">
+
+                <p class="italic">Nephrolepsis exaltata</p>
+                <h3>Boston Fern</h3>
+
+                <div class="text-yellow-500 text-xs py-3">
+                    <i class="ri-star-fill"></i>
+                    <i class="ri-star-fill"></i>
+                    <i class="ri-star-half-fill"></i>
+                    <i class="ri-star-line text-gray-400"></i>
+                    <i class="ri-star-line text-gray-400"></i>
+                </div>
+
+                <div class="flex items-center justify-between">
+                    <p class="text-xl">$5</p>
+
+                    <button class="bg-yellow-500 px-2 py-1 rounded-sm text-xl">
+                        <i class="ri-shopping-cart-fill"></i>
+                    </button>
+                </div>
+            </div>
+
+            <!-- card 2 -->
+            <div class="popular__card bg-green-950 p-10 pt-24 rounded-md relative">
+                <img src="assets/img/cart-2.png" alt="popular_image" class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500">
+
+                <p class="italic">Ficus elastica</p>
+                <h3>Rubber Plant</h3>
+
+                <div class="text-yellow-500 text-xs py-3">
+                    <i class="ri-star-fill"></i>
+                    <i class="ri-star-fill"></i>
+                    <i class="ri-star-half-fill"></i>
+                    <i class="ri-star-line text-gray-400"></i>
+                    <i class="ri-star-line text-gray-400"></i>
+                </div>
+
+                <div class="flex items-center justify-between">
+                    <p class="text-xl">$5</p>
+
+                    <button class="bg-yellow-500 px-2 py-1 rounded-sm text-xl">
+                        <i class="ri-shopping-cart-fill"></i>
+                    </button>
+                </div>
+            </div>
+
+            <!-- card 3 -->
+            <div class="popular__card bg-green-950 p-10 pt-24 rounded-md relative">
+                <img src="assets/img/cart-1.png" alt="popular_image" class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500">
+
+                <p class="italic">Spathiphylum wallisii</p>
+                <h3>Peace Lily</h3>
+
+                <div class="text-yellow-500 text-xs py-3">
+                    <i class="ri-star-fill"></i>
+                    <i class="ri-star-fill"></i>
+                    <i class="ri-star-half-fill"></i>
+                    <i class="ri-star-line text-gray-400"></i>
+                    <i class="ri-star-line text-gray-400"></i>
+                </div>
+
+                <div class="flex items-center justify-between">
+                    <p class="text-xl">$5</p>
+
+                    <button class="bg-yellow-500 px-2 py-1 rounded-sm text-xl">
+                        <i class="ri-shopping-cart-fill"></i>
+                    </button>
+                </div>
+            </div>
+
+            <!-- card 4 -->
+            <div class="popular__card bg-green-950 p-10 pt-24 rounded-md relative">
+                <img src="assets/img/cart-4.png" alt="popular_image" class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500">
+
+                <p class="italic">Adenium obesum</p>
+                <h3>Desert Rose</h3>
+
+                <div class="text-yellow-500 text-xs py-3">
+                    <i class="ri-star-fill"></i>
+                    <i class="ri-star-fill"></i>
+                    <i class="ri-star-half-fill"></i>
+                    <i class="ri-star-line text-gray-400"></i>
+                    <i class="ri-star-line text-gray-400"></i>
+                </div>
+
+                <div class="flex items-center justify-between">
+                    <p class="text-xl">$5</p>
+
+                    <button class="bg-yellow-500 px-2 py-1 rounded-sm text-xl">
+                        <i class="ri-shopping-cart-fill"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+
+      </section>
 
       <!--~~~~~~~~~~~~~ Review ~~~~~~~~~~~~~~-->
       <section id="review"></section>
