--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     />
 
     <!--~~~~~~~~~~~~~ Swiper's CSS ~~~~~~~~~~~~~~-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
 
     <link href="./output.css" rel="stylesheet" />
     <title>Plant Website || Tailwind</title>
@@ -307,115 +311,272 @@
 
       <!--~~~~~~~~~~~~~ Popular ~~~~~~~~~~~~~~-->
       <section id="popular" class="bg-green-900">
-        <div
-          class="flex flex-col items-center gap-3 text-center mb-48"
-        >
+        <div class="flex flex-col items-center gap-3 text-center mb-48">
           <h2 class="title">Your Choice Plant</h2>
           <p class="max-w-2xl">Follow instructions for more</p>
         </div>
 
-        <div class="container w-full grid grid-cols-1 gap-x-8 gap-y-36 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
-            <!-- card 1 -->
-            <div class="popular__card bg-green-950 p-10 pt-24 rounded-md relative">
-                <img src="assets/img/cart-1.png" alt="popular_image" class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500">
+        <div
+          class="container w-full grid grid-cols-1 gap-x-8 gap-y-36 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
+        >
+          <!-- card 1 -->
+          <div
+            class="popular__card bg-green-950 p-10 pt-24 rounded-md relative"
+          >
+            <img
+              src="assets/img/cart-1.png"
+              alt="popular_image"
+              class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500"
+            />
 
-                <p class="italic">Nephrolepsis exaltata</p>
-                <h3>Boston Fern</h3>
+            <p class="italic">Nephrolepsis exaltata</p>
+            <h3>Boston Fern</h3>
 
-                <div class="text-yellow-500 text-xs py-3">
-                    <i class="ri-star-fill"></i>
-                    <i class="ri-star-fill"></i>
-                    <i class="ri-star-half-fill"></i>
-                    <i class="ri-star-line text-gray-400"></i>
-                    <i class="ri-star-line text-gray-400"></i>
-                </div>
-
-                <div class="flex items-center justify-between">
-                    <p class="text-xl">$5</p>
-
-                    <button class="bg-yellow-500 px-2 py-1 rounded-sm text-xl">
-                        <i class="ri-shopping-cart-fill"></i>
-                    </button>
-                </div>
+            <div class="text-yellow-500 text-xs py-3">
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-half-fill"></i>
+              <i class="ri-star-line text-gray-400"></i>
+              <i class="ri-star-line text-gray-400"></i>
             </div>
 
-            <!-- card 2 -->
-            <div class="popular__card bg-green-950 p-10 pt-24 rounded-md relative">
-                <img src="assets/img/cart-2.png" alt="popular_image" class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500">
+            <div class="flex items-center justify-between">
+              <p class="text-xl">$5</p>
 
-                <p class="italic">Ficus elastica</p>
-                <h3>Rubber Plant</h3>
+              <button class="bg-yellow-500 px-2 py-1 rounded-sm text-xl">
+                <i class="ri-shopping-cart-fill"></i>
+              </button>
+            </div>
+          </div>
 
-                <div class="text-yellow-500 text-xs py-3">
-                    <i class="ri-star-fill"></i>
-                    <i class="ri-star-fill"></i>
-                    <i class="ri-star-half-fill"></i>
-                    <i class="ri-star-line text-gray-400"></i>
-                    <i class="ri-star-line text-gray-400"></i>
-                </div>
+          <!-- card 2 -->
+          <div
+            class="popular__card bg-green-950 p-10 pt-24 rounded-md relative"
+          >
+            <img
+              src="assets/img/cart-2.png"
+              alt="popular_image"
+              class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500"
+            />
 
-                <div class="flex items-center justify-between">
-                    <p class="text-xl">$5</p>
+            <p class="italic">Ficus elastica</p>
+            <h3>Rubber Plant</h3>
 
-                    <button class="bg-yellow-500 px-2 py-1 rounded-sm text-xl">
-                        <i class="ri-shopping-cart-fill"></i>
-                    </button>
-                </div>
+            <div class="text-yellow-500 text-xs py-3">
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-half-fill"></i>
+              <i class="ri-star-line text-gray-400"></i>
+              <i class="ri-star-line text-gray-400"></i>
             </div>
 
-            <!-- card 3 -->
-            <div class="popular__card bg-green-950 p-10 pt-24 rounded-md relative">
-                <img src="assets/img/cart-1.png" alt="popular_image" class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500">
+            <div class="flex items-center justify-between">
+              <p class="text-xl">$5</p>
 
-                <p class="italic">Spathiphylum wallisii</p>
-                <h3>Peace Lily</h3>
+              <button class="bg-yellow-500 px-2 py-1 rounded-sm text-xl">
+                <i class="ri-shopping-cart-fill"></i>
+              </button>
+            </div>
+          </div>
 
-                <div class="text-yellow-500 text-xs py-3">
-                    <i class="ri-star-fill"></i>
-                    <i class="ri-star-fill"></i>
-                    <i class="ri-star-half-fill"></i>
-                    <i class="ri-star-line text-gray-400"></i>
-                    <i class="ri-star-line text-gray-400"></i>
-                </div>
+          <!-- card 3 -->
+          <div
+            class="popular__card bg-green-950 p-10 pt-24 rounded-md relative"
+          >
+            <img
+              src="assets/img/cart-1.png"
+              alt="popular_image"
+              class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500"
+            />
 
-                <div class="flex items-center justify-between">
-                    <p class="text-xl">$5</p>
+            <p class="italic">Spathiphylum wallisii</p>
+            <h3>Peace Lily</h3>
 
-                    <button class="bg-yellow-500 px-2 py-1 rounded-sm text-xl">
-                        <i class="ri-shopping-cart-fill"></i>
-                    </button>
-                </div>
+            <div class="text-yellow-500 text-xs py-3">
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-half-fill"></i>
+              <i class="ri-star-line text-gray-400"></i>
+              <i class="ri-star-line text-gray-400"></i>
             </div>
 
-            <!-- card 4 -->
-            <div class="popular__card bg-green-950 p-10 pt-24 rounded-md relative">
-                <img src="assets/img/cart-4.png" alt="popular_image" class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500">
+            <div class="flex items-center justify-between">
+              <p class="text-xl">$5</p>
 
-                <p class="italic">Adenium obesum</p>
-                <h3>Desert Rose</h3>
-
-                <div class="text-yellow-500 text-xs py-3">
-                    <i class="ri-star-fill"></i>
-                    <i class="ri-star-fill"></i>
-                    <i class="ri-star-half-fill"></i>
-                    <i class="ri-star-line text-gray-400"></i>
-                    <i class="ri-star-line text-gray-400"></i>
-                </div>
-
-                <div class="flex items-center justify-between">
-                    <p class="text-xl">$5</p>
-
-                    <button class="bg-yellow-500 px-2 py-1 rounded-sm text-xl">
-                        <i class="ri-shopping-cart-fill"></i>
-                    </button>
-                </div>
+              <button class="bg-yellow-500 px-2 py-1 rounded-sm text-xl">
+                <i class="ri-shopping-cart-fill"></i>
+              </button>
             </div>
+          </div>
+
+          <!-- card 4 -->
+          <div
+            class="popular__card bg-green-950 p-10 pt-24 rounded-md relative"
+          >
+            <img
+              src="assets/img/cart-4.png"
+              alt="popular_image"
+              class="w-56 absolute -top-5 left-1/2 transform -translate-x-1/2 -translate-y-1/2 duration-500"
+            />
+
+            <p class="italic">Adenium obesum</p>
+            <h3>Desert Rose</h3>
+
+            <div class="text-yellow-500 text-xs py-3">
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-half-fill"></i>
+              <i class="ri-star-line text-gray-400"></i>
+              <i class="ri-star-line text-gray-400"></i>
+            </div>
+
+            <div class="flex items-center justify-between">
+              <p class="text-xl">$5</p>
+
+              <button class="bg-yellow-500 px-2 py-1 rounded-sm text-xl">
+                <i class="ri-shopping-cart-fill"></i>
+              </button>
+            </div>
+          </div>
         </div>
-
       </section>
 
       <!--~~~~~~~~~~~~~ Review ~~~~~~~~~~~~~~-->
-      <section id="review"></section>
+      <section id="review" class="relative mb-20 md:mb-28 overflow-hidden">
+        <div class="absolute -top-8 -left-12 opacity-50">
+            <img src="assets/img/leaf-4.png" alt="leaf_image" class="w-40 md:w-52 xl:w-64">
+        </div>
+
+        <div
+          class="flex flex-col items-center gap-3 text-center mb-10 md:mb-20"
+        >
+          <h2 class="title">Custom Review</h2>
+          <p class="max-w-2xl">Follow instructions for more</p>
+        </div>
+
+        <div class="container">
+          <div class="swiper py-12">
+            <ul class="swiper-wrapper">
+              <li class="swiper-slide">
+                <div class="flex flex-col gap-5 bg-green-900 rounded-md p-6">
+                  <p class="font-Lobster">
+                    See what our customers are saying! Read honest reviews from
+                    real users about their experience with our products and
+                    services. Your feedback helps us grow and deliver the best
+                    quality possible.
+                  </p>
+                  <div class="flex items-center">
+                    <img
+                      src="assets/img/review-1.jpg"
+                      alt="review_image"
+                      class="w-12 h-12 rounded-full"
+                    />
+                    <div class="ml-2">
+                      <p class="text-yellow-500 uppercase">John Doe</p>
+                      <p>Designer</p>
+                    </div>
+                  </div>
+                  <i class="ri-double-quotes-r text-4xl ml-auto"></i>
+                </div>
+              </li>
+
+              <li class="swiper-slide">
+                <div class="flex flex-col gap-5 bg-green-900 rounded-md p-6">
+                  <p class="font-Lobster">
+                    See what our customers are saying! Read honest reviews from
+                    real users about their experience with our products and
+                    services. Your feedback helps us grow and deliver the best
+                    quality possible.
+                  </p>
+                  <div class="flex items-center">
+                    <img
+                      src="assets/img/review-2.jpg"
+                      alt="review_image"
+                      class="w-12 h-12 rounded-full"
+                    />
+                    <div class="ml-2">
+                      <p class="text-yellow-500 uppercase">John Doe</p>
+                      <p>Designer</p>
+                    </div>
+                  </div>
+                  <i class="ri-double-quotes-r text-4xl ml-auto"></i>
+                </div>
+              </li>
+
+              <li class="swiper-slide">
+                <div class="flex flex-col gap-5 bg-green-900 rounded-md p-6">
+                  <p class="font-Lobster">
+                    See what our customers are saying! Read honest reviews from
+                    real users about their experience with our products and
+                    services. Your feedback helps us grow and deliver the best
+                    quality possible.
+                  </p>
+                  <div class="flex items-center">
+                    <img
+                      src="assets/img/review-3.jpg"
+                      alt="review_image"
+                      class="w-12 h-12 rounded-full"
+                    />
+                    <div class="ml-2">
+                      <p class="text-yellow-500 uppercase">John Doe</p>
+                      <p>Designer</p>
+                    </div>
+                  </div>
+                  <i class="ri-double-quotes-r text-4xl ml-auto"></i>
+                </div>
+              </li>
+
+              <li class="swiper-slide">
+                <div class="flex flex-col gap-5 bg-green-900 rounded-md p-6">
+                  <p class="font-Lobster">
+                    See what our customers are saying! Read honest reviews from
+                    real users about their experience with our products and
+                    services. Your feedback helps us grow and deliver the best
+                    quality possible.
+                  </p>
+                  <div class="flex items-center">
+                    <img
+                      src="assets/img/review-4.jpg"
+                      alt="review_image"
+                      class="w-12 h-12 rounded-full"
+                    />
+                    <div class="ml-2">
+                      <p class="text-yellow-500 uppercase">John Doe</p>
+                      <p>Designer</p>
+                    </div>
+                  </div>
+                  <i class="ri-double-quotes-r text-4xl ml-auto"></i>
+                </div>
+              </li>
+
+              <li class="swiper-slide">
+                <div class="flex flex-col gap-5 bg-green-900 rounded-md p-6">
+                  <p class="font-Lobster">
+                    See what our customers are saying! Read honest reviews from
+                    real users about their experience with our products and
+                    services. Your feedback helps us grow and deliver the best
+                    quality possible.
+                  </p>
+                  <div class="flex items-center">
+                    <img
+                      src="assets/img/review-1.jpg"
+                      alt="review_image"
+                      class="w-12 h-12 rounded-full"
+                    />
+                    <div class="ml-2">
+                      <p class="text-yellow-500 uppercase">John Doe</p>
+                      <p>Designer</p>
+                    </div>
+                  </div>
+                  <i class="ri-double-quotes-r text-4xl ml-auto"></i>
+                </div>
+              </li>
+            </ul>
+
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!--~~~~~~~~~~~~~ footer ~~~~~~~~~~~~~~-->
@@ -434,6 +595,7 @@
     <!--~~~~~~~~~~~~~ Scroll Up ~~~~~~~~~~~~~~-->
 
     <!--~~~~~~~~~~~~~ Swiper JS ~~~~~~~~~~~~~~-->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <!--~~~~~~~~~~~~~ SCROLLREVEAL ~~~~~~~~~~~~~~-->
 
