--- a/index.html
+++ b/index.html
@@ -444,7 +444,11 @@
       <!--~~~~~~~~~~~~~ Review ~~~~~~~~~~~~~~-->
       <section id="review" class="relative mb-20 md:mb-28 overflow-hidden">
         <div class="absolute -top-8 -left-12 opacity-50">
-            <img src="assets/img/leaf-4.png" alt="leaf_image" class="w-40 md:w-52 xl:w-64">
+          <img
+            src="assets/img/leaf-4.png"
+            alt="leaf_image"
+            class="w-40 md:w-52 xl:w-64"
+          />
         </div>
 
         <div
@@ -580,19 +584,121 @@
     </main>
 
     <!--~~~~~~~~~~~~~ footer ~~~~~~~~~~~~~~-->
-    <footer>
+    <footer class="bg-yellow-100 text-green-950 pt-20 pb-10 md:pt-28 relative">
+
       <!-- newsletter -->
+      <div
+        class="container text-white absolute top-0 left-0 right-0 -translate-y-1/2"
+      >
+        <div
+          class="bg-green-900 px-10 pt-5 pb-10 space-y-5 rounded-md"
+        >
+          <h3>
+            <span class="text-yellow-500">Subscribe</span> to our newsletter
+          </h3>
+          <div class="flex flex-col md:flex-row gap-1">
+            <input
+              type="email"
+              placeholder="Your Email Address"
+              class="w-full px-5 py-3 text-green-900 rounded-md outline-none"
+            />
+            <button
+              class="flex items-center justify-center gap-1 bg-green-950 px-5 py-3 rounded-md hover:opacity-80 duration-300"
+            >
+              <span>Subscribe</span>
+              <i class="ri-send-plane-2-fill"></i>
+            </button>
+          </div>
+        </div>
+      </div>
 
       <!-- social icon -->
+      <div class="container mt-16 mb-10">
+        <div class="border-b border-green-500 relative">
+          <div class="absolute top-0 left-0 right-0 max-w-36 mx-auto transform -translate-y-1/2">
+            <div class="bg-yellow-100 text-lg text-center space-x-2">
+                <i
+                  class="ri-facebook-fill hover:text-yellow-500 duration-300 cursor-pointer"
+                ></i>
+                <i
+                  class="ri-twitter-x-line hover:text-yellow-500 duration-300 cursor-pointer text-base"
+                ></i>
+                <i
+                  class="ri-instagram-line hover:text-yellow-500 duration-300 cursor-pointer"
+                ></i>
+                <i
+                  class="ri-linkedin-fill hover:text-yellow-500 duration-300 cursor-pointer"
+                ></i>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <!-- content -->
+      <div class="container grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8 text-center md:text-start">
+        <!-- item 1 -->
+         <div class="">
+            <div class="text-7xl text-green-700 text-center inline-block">
+                <i class="ri-leaf-fill"></i>
+                <p class="font-Lobster text-xl sm:text-2xl">IndorePlants.</p>
+            </div>
+         </div>
+
+         <!-- item 2 -->
+          <div>
+            <p class="mb-5 font-bold text-xl">Quick Link</p>
+
+            <div class="flex flex-col gap-1">
+                <a href="#">Plants</a>
+                <a href="#">Flower</a>
+                <a href="#">Gardening</a>
+                <a href="#">Seeds</a>
+                <a href="#">Shipping</a>
+            </div>
+          </div>
+
+          <!-- item 3 -->
+          <div>
+            <p class="mb-5 font-bold text-xl">Popular Services</p>
+
+            <div class="flex flex-col gap-1">
+                <a href="#">Tree Planting</a>
+                <a href="#">Grass Cutting</a>
+                <a href="#">Weed Control</a>
+                <a href="#">Projects</a>
+            </div>
+          </div>
+
+          <!-- item 4 -->
+          <div>
+            <p class="mb-5 font-bold text-xl">Contact Us</p>
+
+            <div class="flex flex-col gap-1">
+                <a href="#">+88 333 89 910</a>
+                <a href="mailto:atiksafinmd1@gmail.com">atiksafinmd1@gmail.com</a>
+                <a href="#">Weed Control</a> <br>
+                <a href="#">123 AIUB, kuratoli, <br> Kuril, Dhaka-1217</a>
+            </div>
+          </div>
+    </div>
 
       <!-- copyright -->
+       <div class="container">
+        <p class="text-center mt-10 opacity-50">Copyright &copy; 2024 Atik. All rights reserved.</p>
+       </div>
 
       <!-- floral image -->
+       <div class="absolute bottom-0 left-0 opacity-20 pointer-events-none">
+        <img src="assets/img/floral-1.png" alt="floral_image" class="w-full lg:w-1/2">
+       </div>
+
     </footer>
 
     <!--~~~~~~~~~~~~~ Scroll Up ~~~~~~~~~~~~~~-->
+    <a href="#" class="fixed right-4 -bottom-1/2 bg-yellow-500 shadow-sm inline-block px-3 py-1 md:px-4 md:py-2 rounded-md text-lg z-50 hover:-translate-y-1 duration-300" id="scroll-up">
+        <i class="ri-arrow-up-line"></i>
+    </a>
+
 
     <!--~~~~~~~~~~~~~ Swiper JS ~~~~~~~~~~~~~~-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
